fix overlap issue on help text

--- a/components/org.apache.stratos.manager.console/console/themes/theme0/css/custom/style.css
+++ b/components/org.apache.stratos.manager.console/console/themes/theme0/css/custom/style.css
@@ -248,7 +248,7 @@ button.hover-delete-autoscale{
     cursor: pointer;
 }
 
-.help-block {
+.notification {
     background-color: rgb(255, 252, 196);
     padding: 2px 10px;
     border-radius: 4px;
